# picker

./: CMakeLists.txt  arm_movement.cpp  arm_movement.h  classifier.cpp  classifier.h  core.cpp  core.h  display.cpp  display.h  gui.cpp  gui.h  images.h  img.h  input.cpp  input.h  main.cpp  ov7670.cpp  ov7670.h  picker.cpp  picker.h  sg90.cpp  sg90.h  state.cpp  state.h  test_rx.py
edge/: README.txt
edge/model-parameters/: model_metadata.h  model_variables.h
edge/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
train/: train.py
